[gd_scene load_steps=7 format=2]

[ext_resource path="res://TabScreens/journalreader/JournalReader.tscn" type="PackedScene" id=1]
[ext_resource path="res://MainContainer.gd" type="Script" id=2]
[ext_resource path="res://TabScreens/Shipyard/Shipyard.tscn" type="PackedScene" id=3]
[ext_resource path="res://TabScreens/DefaultTheme.tres" type="Theme" id=4]
[ext_resource path="res://Notifications.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.113725 )

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 576.0
size_flags_vertical = 3
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="VBoxContainer/MainContainer"]
margin_right = 100.0
margin_bottom = 576.0
rect_min_size = Vector2( 100, 0 )
mouse_filter = 2
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PassThroughPoly" type="Polygon2D" parent="VBoxContainer/MainContainer/Panel/VBoxContainer"]
visible = false
polygon = PoolVector2Array( 0, 0, 100, 0, 100, 120, 0, 120 )

[node name="BtCMDR" type="OptionButton" parent="VBoxContainer/MainContainer/Panel/VBoxContainer"]
margin_right = 100.0
margin_bottom = 21.0
text = "Item 0"
items = [ "Item 0", null, false, 0, false, "0", null, false, 0, false ]
selected = 0

[node name="BtLogs" type="Button" parent="VBoxContainer/MainContainer/Panel/VBoxContainer"]
margin_top = 25.0
margin_right = 100.0
margin_bottom = 46.0
text = "Log Entries"

[node name="BtShips" type="Button" parent="VBoxContainer/MainContainer/Panel/VBoxContainer"]
margin_top = 50.0
margin_right = 100.0
margin_bottom = 71.0
text = "Ships"

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/MainContainer"]
margin_left = 104.0
margin_right = 1024.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
tabs_visible = false

[node name="TabLogs" type="Tabs" parent="VBoxContainer/MainContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0

[node name="JournalReader2" parent="VBoxContainer/MainContainer/TabContainer/TabLogs" instance=ExtResource( 1 )]

[node name="TabShips" type="Tabs" parent="VBoxContainer/MainContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Shipyard" parent="VBoxContainer/MainContainer/TabContainer/TabShips" instance=ExtResource( 3 )]
margin_left = -4.4949
margin_top = 2.99661
margin_right = -4.49487
margin_bottom = 2.99658

[node name="Tabs3" type="Tabs" parent="VBoxContainer/MainContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Tabs4" type="Tabs" parent="VBoxContainer/MainContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Notifications" type="Label" parent="VBoxContainer"]
margin_top = 580.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 20 )
script = ExtResource( 5 )

[connection signal="item_selected" from="VBoxContainer/MainContainer/Panel/VBoxContainer/BtCMDR" to="VBoxContainer/MainContainer" method="_on_BtCMDR_item_selected"]
[connection signal="pressed" from="VBoxContainer/MainContainer/Panel/VBoxContainer/BtLogs" to="VBoxContainer/MainContainer" method="_on_BtLogs_pressed"]
[connection signal="pressed" from="VBoxContainer/MainContainer/Panel/VBoxContainer/BtShips" to="VBoxContainer/MainContainer" method="_on_BtShips_pressed"]
